fixed weird offset on small and midsize viewports

--- a/public/less/trp3.less
+++ b/public/less/trp3.less
@@ -563,14 +563,6 @@ ul li.placeholder:before {
   position: relative;
   flex-grow: 1;
   .transition500ms;
-
-  @media @mid {
-    left: @leftMarginMid;
-  }
-
-  @media @small {
-    left: @leftMarginSmall;
-  }
 }
 
 .trpContentPanel {
